--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.org/"
+baseurl = "https://www.digitalinklingsblog.com"
 title = "Digital Inklings"
 author = "Owen Auch"
 paginate = 3
